// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<About /> should render "About page" 1`] = `
<div>
  <h1
    class="my-auto text-center text-4xl"
  >
    About page
  </h1>
</div>
`;

exports[`<Home /> should render "Landing page" 1`] = `
<div>
  <h1
    class="my-auto text-center text-4xl"
  >
    Landing page
  </h1>
</div>
`;

exports[`<Mentors /> should render "Mentors page" 1`] = `
<div>
  <h1
    class="my-auto text-center text-4xl"
  >
    Mentors page
  </h1>
</div>
`;

exports[`<Profile /> should render "User profile page" 1`] = `
<div>
  <h1
    class="my-auto text-center text-4xl"
  >
    User profile page
  </h1>
</div>
`;
